work in progress

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,11 +10,7 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
-spring.jpa.properties.hibernate.type.preferred_uuid_jdbc_type=CHAR
 spring.jpa.properties.hibernate.types.print.banner=false
-spring.jpa.properties.org.hibernate.envers.audit_table_suffix=_aud
-spring.jpa.properties.org.hibernate.envers.revision_field_name=id_revision
-spring.jpa.properties.org.hibernate.envers.revision_type_field_name=id_revision_type
 
 # Spring MVC
 spring.web.locale=en_US
@@ -30,6 +26,13 @@ management.endpoint.health.show-details=always
 # LDAP
 spring.ldap.urls=ldap://ldap.ampliar.dev.br:389
 spring.ldap.base=dc=ampliar,dc=dev,dc=br
+spring.ldap.anonymous-read-only=true
+
+# Encryption
+ecm.crypto.key=${AES_KEY}
+ecm.crypto.iterations=210000
+ecm.crypto.key-size=256
+ecm.crypto.aad=tenant:cobra-command
 
 # Others
 app.baseHost=${BASE_HOST\:http\://localhost\:8081}
