Encryption algorithm bug fixed.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,8 +24,8 @@ management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 
 # LDAP
-spring.ldap.urls=ldap://ldap.ampliar.dev.br:389
-spring.ldap.base=dc=ampliar,dc=dev,dc=br
+spring.ldap.urls=ldap://localhost:10389
+spring.ldap.base=dc=example,dc=com
 spring.ldap.anonymous-read-only=true
 
 # Encryption
