removing node.js

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,10 +22,14 @@ spring.mvc.format.time=HH\:mm\:ss
 # Actuators
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
+management.info.java.enabled=true
+management.info.os.enabled=true
+management.info.git.mode=full
+info.application.name=${spring.application.name}
 
 # LDAP
-spring.ldap.urls=ldap://localhost:10389
-spring.ldap.base=dc=example,dc=com
+spring.ldap.urls=${LDAP_URL}
+spring.ldap.base=${LDAP_BASE}
 spring.ldap.anonymous-read-only=true
 
 # Encryption
@@ -34,5 +38,9 @@ ecm.crypto.iterations=210000
 ecm.crypto.key-size=256
 ecm.crypto.aad=tenant:cobra-command
 
-# Others
-app.baseHost=${BASE_HOST\:http\://localhost\:8081}
+# Web
+spring.mvc.static-path-pattern=/static/**
+spring.devtools.livereload.port=35728
+
+# Swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
