Add SonarQube workflow and refactor for cleaner code analysis

--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,14 @@
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
                         <version>0.8.13</version>
+                        <configuration>
+                            <excludes>
+                                <exclude>ludo/mentis/aciem/ecm/domain/*</exclude>
+                                <exclude>ludo/mentis/aciem/ecm/exception/*</exclude>
+                                <exclude>ludo/mentis/aciem/ecm/config/*</exclude>
+                                <exclude>ludo/mentis/aciem/ecm/model/*</exclude>
+                            </excludes>
+                        </configuration>
                         <executions>
                             <execution>
                                 <id>prepare-agent</id>
